[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "tokio"] }
info = "0.1.0"
log = "0.4.20"
my-env-logger-style = { version = "0.1.1", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["parking_lot", "net", "time"] }
