[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
directories = "5.0.1"
iced = { version = "0.10.0", features = ["image", "tokio"] }
info = "0.1.0"
log = "0.4.20"
my-env-logger-style = { version = "0.1.1", default-features = false }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "gzip", "deflate", "brotli"] }
scryfall = "0.14.2"
tokio = { version = "1.34.0", default-features = false, features = ["fs", "parking_lot", "net", "time"] }
uuid = { version = "1.6.1", default-features = false }
